--- a/assignments/index.html
+++ b/assignments/index.html
@@ -5,13 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>JS IV</title>
+  <title>JS IV, in D- MINOR by GIl Olsen</title>
 
   <script src="prototype-refactor.js"></script>
   <script src="lambda-classes.js"></script>
 </head>
 
 <body>
-  <h1>JS IV - Check your work in the console!</h1>
+  <h1>JS IV, in D- MINOR by GIl Olsen</h1>
+<hr>
+<h1>NOTES</h1>
+<hr>
+
+
 </body>
 </html>
